tgthrProgramManagement/force-app/main/default/objects/Benefit/fields/Available_for_Case_Management__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Case_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available for Case Management</label>
    <type>Checkbox</type>
</CustomField>