tgthrProgramManagement/force-app/main/default/objects/Benefit/fields/Available_for_Clinical__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Clinical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available for Clinical</label>
    <type>Checkbox</type>
</CustomField>