tgthrProgramManagement/force-app/main/default/objects/Benefit/fields/Available_for_Peer__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Peer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this benefit will be available for selection from the Peer Note button on Case records in the Services Provided section.</description>
    <inlineHelpText>Check this box to make this benefit available from the Peer Note button.</inlineHelpText>
    <label>Available for Peer</label>
    <type>Checkbox</type>
</CustomField>