tgthrProgramManagement/force-app/main/default/objects/Benefit/fields/Available_for_Program_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Program_Engagement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available for Program Engagement</label>
    <type>Checkbox</type>
</CustomField>