tgthrProgramManagement/force-app/main/default/objects/Benefit/fields/Lifecycle_State__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_State__c</fullName>
    <description>Tracks the versioning lifecycle of a Benefit record. Active = current; Replaced = superseded by a newer Benefit; Retired = permanently deactivated; Draft = not yet live.</description>
    <inlineHelpText>Active = selectable for disbursements. Replaced = a newer version exists. Retired = no longer in use. Draft = not yet published.</inlineHelpText>
    <label>Lifecycle State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Replaced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>