tgthrProgramManagement/force-app/main/default/objects/Benefit/fields/Replaced_By_Benefit__c.field-meta.xml
<CustomField>
    <fullName>Replaced_By_Benefit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When this Benefit is superseded, this field points to the new Benefit that replaced it. Populated automatically by BenefitReplacementService when a Replace action is performed.</description>
    <inlineHelpText>Populated automatically when this benefit is replaced. Click to navigate to the active replacement.</inlineHelpText>
    <label>Replaced By Benefit</label>
    <referenceTo>Benefit</referenceTo>
    <relationshipLabel>Replaces Benefits</relationshipLabel>
    <relationshipName>Replaces_Benefits</relationshipName>
    <type>Lookup</type>
</CustomField>