tgthrProgramManagement/force-app/main/default/objects/Benefit/fields/Supersedes_Benefit__c.field-meta.xml
<CustomField>
    <fullName>Supersedes_Benefit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The older Benefit record that this Benefit replaces. Establishes the version lineage chain so historical disbursements and interviews remain tied to the original Benefit.</description>
    <inlineHelpText>If this benefit was created to replace an older one, select the predecessor here.</inlineHelpText>
    <label>Supersedes Benefit</label>
    <referenceTo>Benefit</referenceTo>
    <relationshipLabel>Replacement Benefits</relationshipLabel>
    <relationshipName>Replacement_Benefits</relationshipName>
    <type>Lookup</type>
</CustomField>