tgthrProgramManagement/force-app/main/default/objects/Benefit/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <label>UUID</label>
    <length>52</length>
    <type>Text</type>
</CustomField>