tgthrProgramManagement/force-app/main/default/objects/Benefit/validationRules/CPT_Code_Required_for_Clinical.validationRule-meta.xml
<ValidationRule>
    <fullName>CPT_Code_Required_for_Clinical</fullName>
    <active>false</active>
    <description>CPT Code is required when the related Benefit Type has a category of Clinical</description>
    <errorConditionFormula>ISBLANK(CPT_Code__c) &amp;&amp;  
 ISPICKVAL(BenefitType.Category,&quot;Clinical&quot;)</errorConditionFormula>
    <errorMessage>CPT Code is required when the related Benefit Type has a category of Clinical</errorMessage>
</ValidationRule>